--- a/express/server2.html
+++ b/express/server2.html
@@ -3,15 +3,85 @@
 
 <head>
     <title>server 2</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            margin: 0;
+            padding-bottom: 3rem;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        }
+
+        #form {
+            background: rgba(0, 0, 0, 0.15);
+            padding: 0.25rem;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            display: flex;
+            height: 100px;
+            box-sizing: border-box;
+            backdrop-filter: blur(10px);
+        }
+
+        #input_n {
+            border: none;
+            padding: 0 1rem;
+            flex-grow: 1;
+            border-radius: 2rem;
+            margin: 0.50rem;
+        }
+
+        #input_m {
+            border: none;
+            padding: 0 1rem;
+            flex-grow: 1;
+            border-radius: 2rem;
+            margin: 0.50rem;
+        }
+
+        #input_n:focus {
+            outline: none;
+        }
+
+        #input_m:focus {
+            outline: none;
+        }
+
+        #cat {
+            background-image: url("https://sun9-16.userapi.com/c854224/v854224663/1d467b/wTpFTl8QHkc.jpg");
+            background-size: 150%;
+            width: 150px;
+            height: 100px;
+            border-radius: 10px;
+        }
+
+        #cat:active {
+            background-image: url("https://pbs.twimg.com/media/ESU36K1WAAAz20y.jpg");
+            background-size: 135%;
+        }
+
+        #messages {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        #messages>li {
+            padding: 0.5rem 1rem;
+        }
+
+        #messages>li:nth-child(odd) {
+            background: #efefef;
+        }
+    </style>
 </head>
 
 <body>
     <ul id="messages"></ul>
     <form id="form" action="">
-        <input id="input" autocomplete="off" /><button id="cat">Send</button>
-        <br>
-        <input id="input2" autocomplete="off" />
+        <input id="input_n" autocomplete="off" />
+        <input id="input_m" autocomplete="off" />
+        <button id="cat"></button>
     </form>
 
     <script src="/socket.io/socket.io.js"></script>
@@ -20,13 +90,14 @@
 
         var messages = document.getElementById('messages');
         var form = document.getElementById('form');
-        var input = document.getElementById('input');
+        var input_n = document.getElementById('input_n');
+        var input_m = document.getElementById('input_m');
 
         form.addEventListener('submit', function (e) {
             e.preventDefault();
-            if (input.value) {
-                socket.emit('chat message', input.value);
-                input.value = '';
+            if (input_n.value && input_m.value) {
+                socket.emit('chat message', input_n.value + ":   " + input_m.value);
+                input_m.value = '';
             }
         });
 
