--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/quiz2.html';">Daily quiz 2</button>
             </td>
         </tr>
+        <tr>
+            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/server2.html';">Server 2</button>
+            </td>
+        </tr>
     </table>
     <h6>I am footer... Footer and nothing else... </h6>
 </body>
