--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             </td>
         </tr>
         <tr>
-            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/server2.html';">Server 2</button>
+            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/express/server2.html';">Server
+                    2</button>
             </td>
         </tr>
     </table>
