--- a/express/server2.html
+++ b/express/server2.html
@@ -98,6 +98,7 @@
             if (input_n.value && input_m.value) {
                 socket.emit('chat message', input_n.value + ":   " + input_m.value);
                 input_m.value = '';
+                input_n.value = '';
             }
         });
 
@@ -106,6 +107,11 @@
             item.textContent = msg;
             messages.appendChild(item);
             window.scrollTo(0, document.body.scrollHeight);
+        });
+
+        fetch('/cookie', {
+            method: 'POST',
+            body: input_n
         });
     </script>
 </body>
