--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -227,10 +227,16 @@
             flag = 0;
         }
         function mouseWheel(e) {
-            if (e.deltaY >= 0)
+            if (e.deltaY >= 0) {
+                delx -= (e.clientX - 250) / 250 * zoom_value;
+                dely -= (e.clientY - 250) / 250 * zoom_value;
                 zoom_value *= 1.2;
-            if (e.deltaY < 0)
+            }
+            if (e.deltaY < 0) {
+                delx += (e.clientX - 250) / 250 * zoom_value;
+                dely += (e.clientY - 250) / 250 * zoom_value;
                 zoom_value /= 1.2;
+            }
         }
     </script>
 
