--- a/express/server2.html
+++ b/express/server2.html
@@ -15,8 +15,21 @@
             padding: 0.25rem;
             position: fixed;
             bottom: 0;
-            left: 0;
+            left: 50px;
             right: 0;
+            display: flex;
+            height: 100px;
+            box-sizing: border-box;
+            backdrop-filter: blur(10px);
+        }
+
+        #log {
+            background: rgba(0, 0, 0, 0.15);
+            padding: 0.25rem;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 100px;
             display: flex;
             height: 100px;
             box-sizing: border-box;
@@ -112,8 +125,8 @@
 
 <body>
     <ul id="messages"></ul>
+    <button id="log" onclick="set_nickname();">log in</button>
     <form id="form" action="">
-        <button id="log" onclick="set_nickname();">log in</button>
         <input id="input_n" autocomplete="off" />
         <input id="input_m" autocomplete="off" />
         <button id="cat"></button>
