--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
                     2</button>
             </td>
         </tr>
+        <tr>
+            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/quiz3.html';">Daily quiz 3</button>
+            </td>
+        </tr>
     </table>
-    <h6>I am footer... Footer and nothing else... </h6>
+    <h6>I am footer... Only footer and nothing else... </h6>
 </body>
 
 </html>
