--- a/quiz3.html
+++ b/quiz3.html
@@ -9,7 +9,7 @@
 
         function search(text) {
             var i = 0, j;
-            var n, k;
+            var n, k, cnt = 0;
             alert(text);
 
             while (text[i] != '\n')
@@ -23,19 +23,23 @@
             i++;
 
             var A = (text.slice(i)).split('');
-            alert(A);
-            /*
-            for (var i = 0; i < A.length; i++) {
-                if (A[i] < A.length)
-                    L[A[i]] = 0;
-            }
-            for (var j = 0; j < L.length; j++) {
-                if (L[j] != 0) {
-                    alert(j);
+
+            for (i = 0; i < A.length - k + 1; i++) {
+                if (A[i] == '-') {
+                    for (j = 0; j < k; j++) {
+                        if (A[i + j] == '-')
+                            A[i + j] = '+';
+                        else
+                            A[i + j] = '-';
+                    }
+                    cnt++;
+                }
+                if (A.indexOf('-', 0) == -1) {
+                    alert(cnt);
                     return;
                 }
             }
-            alert(0);*/
+            alert(-1);
         }
 
         function read() {
