--- a/quiz3.html
+++ b/quiz3.html
@@ -39,7 +39,7 @@
                     return;
                 }
             }
-            alert(-1);
+            alert("I can't do it :(");
         }
 
         function read() {
