--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -233,8 +233,8 @@
                 zoom_value *= 1.1;
             if (e.deltaY < 0)
                 zoom_value /= 1.1;
-            delx += (e.clientX - oldx) / 250.0 * zoom_value
-            dely += (e.clientY - oldy) / 250.0 * zoom_value;
+            delx -= (e.clientX - oldx) / 250.0 * zoom_value
+            dely -= (e.clientY - oldy) / 250.0 * zoom_value;
         }
     </script>
 
