--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -227,14 +227,16 @@
             flag = 0;
         }
         function mouseWheel(e) {
-            delx += (e.clientX - 250.0) / 250.0 * zoom_value;
-            dely += (e.clientY - 250.0) / 250.0 * zoom_value;
+            var olddelx = delx;
+            var olddely = dely;
+            delx = (e.clientX - 250.0) / 250.0 * zoom_value;
+            dely = (e.clientY - 250.0) / 250.0 * zoom_value;
             if (e.deltaY >= 0)
                 zoom_value *= 1.1;
             if (e.deltaY < 0)
                 zoom_value /= 1.1;
-            delx -= (e.clientX - 250.0) / 250.0 * zoom_value;
-            dely -= (e.clientY - 250.0) / 250.0 * zoom_value;
+            delx = olddelx;
+            dely = olddely;
         }
     </script>
 
