--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -227,16 +227,14 @@
             flag = 0;
         }
         function mouseWheel(e) {
-            var olddelx = delx;
-            var olddely = dely;
-            delx = (e.clientX - 250.0) / 250.0 * zoom_value;
-            dely = -(e.clientY - 250.0) / 250.0 * zoom_value;
+            delx += (e.clientX - 250.0) / 250.0 * zoom_value;
+            dely += (e.clientY - 250.0) / 250.0 * zoom_value;
             if (e.deltaY >= 0)
                 zoom_value *= 1.1;
             if (e.deltaY < 0)
                 zoom_value /= 1.1;
-            delx = olddelx;
-            dely = olddely;
+            delx -= (e.clientX - 250.0) / 250.0 * zoom_value;
+            dely -= (e.clientY - 250.0) / 250.0 * zoom_value;
         }
     </script>
 
