--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -161,10 +161,10 @@
         function webGLStart() {
             zoom_value = 3;
             checkers_cell_width = 30;
-            delx = zoom_value;
-            dely = zoom_value;
-            oldx = zoom_value;
-            oldy = zoom_value;
+            delx = 0;
+            dely = 0;
+            oldx = 0;
+            oldy = 0;
             document.getElementById('input_checkers_cell_width').value = checkers_cell_width;
 
             var xmlhttp = new XMLHttpRequest();
