--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -229,12 +229,13 @@
         function mouseWheel(e) {
             delx += (e.clientX - oldx) / 250.0 * zoom_value;
             dely -= (e.clientY - oldy) / 250.0 * zoom_value;
+            var old = zoom_value;
             if (e.deltaY >= 0)
                 zoom_value *= 1.1;
             if (e.deltaY < 0)
                 zoom_value /= 1.1;
-            delx -= (e.clientX - oldx) / 250.0 * zoom_value;
-            dely += (e.clientY - oldy) / 250.0 * zoom_value;
+            delx -= (e.clientX - oldx) / 250.0 * old;
+            dely += (e.clientY - oldy) / 250.0 * old;
         }
     </script>
 
