--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -163,8 +163,8 @@
             checkers_cell_width = 30;
             delx = 3;
             dely = 3;
-            oldx = 0;
-            oldy = 0;
+            oldx = 3;
+            oldy = 3;
             document.getElementById('input_checkers_cell_width').value = checkers_cell_width;
 
             var xmlhttp = new XMLHttpRequest();
@@ -229,13 +229,12 @@
         function mouseWheel(e) {
             delx += (e.clientX - oldx) / 250.0 * zoom_value;
             dely -= (e.clientY - oldy) / 250.0 * zoom_value;
-            var old = zoom_value;
             if (e.deltaY >= 0)
                 zoom_value *= 1.1;
             if (e.deltaY < 0)
                 zoom_value /= 1.1;
-            delx -= (e.clientX - oldx) / 250.0 * old;
-            dely += (e.clientY - oldy) / 250.0 * old;
+            delx -= (e.clientX - oldx) / 250.0 * zoom_value;
+            dely += (e.clientY - oldy) / 250.0 * zoom_value;
         }
     </script>
 
