--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </style>
 </head>
 
-<body background="https://www.anypics.ru/download.php?file=201301/1440x900/anypics.ru-57785.jpg">
+<body
+    background="https://f.vividscreen.info/soft/95980c2cbc59cbbd8aeedaf38f8bfb3e/Drawing-Of-Funny-Cat-Playing-Guitar-2880x1920.jpg">
     <h1> My projects) </h1>
     <hr color=Black size="4">
     <p><img src="https://secure.gravatar.com/avatar/84f947d12ceee2d3dc956c02d23f9b5f" width="50" height="50"
