--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
             bottom: 0;
             padding: 10px;
         }
+
+        body {
+            background-image: url(https://f.vividscreen.info/soft/95980c2cbc59cbbd8aeedaf38f8bfb3e/Drawing-Of-Funny-Cat-Playing-Guitar-2880x1920.jpg);
+            background-size: 100%;
+        }
     </style>
 </head>
 
-<body
-    background="https://f.vividscreen.info/soft/95980c2cbc59cbbd8aeedaf38f8bfb3e/Drawing-Of-Funny-Cat-Playing-Guitar-2880x1920.jpg">
+<body>
     <h1> My projects) </h1>
     <hr color=Black size="4">
     <p><img src="https://secure.gravatar.com/avatar/84f947d12ceee2d3dc956c02d23f9b5f" width="50" height="50"
