--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         body {
             background-image: url(https://f.vividscreen.info/soft/95980c2cbc59cbbd8aeedaf38f8bfb3e/Drawing-Of-Funny-Cat-Playing-Guitar-2880x1920.jpg);
             background-size: 100%;
+            background-repeat: no-repeat;
         }
     </style>
 </head>
