--- a/quiz4.html
+++ b/quiz4.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
 
         function search(text) {
-            var n = parseInt(text), ;
+            var n = parseInt(text);
             var N = n;
             alert(text);
             var flag = 1;
