--- a/quiz4.html
+++ b/quiz4.html
@@ -19,7 +19,7 @@
                 return;
             }
 
-            while (True) {
+            while (true) {
                 if (A.length == 10) {
                     alert(N);
                     return;
