--- a/quiz4.html
+++ b/quiz4.html
@@ -9,12 +9,12 @@
 
         function search(text) {
             var n = parseInt(text);
-            var N = n;
+            var N = 0;
             alert(text);
             var flag = 1;
-            var A = text.split('');
+            var A = [];
 
-            if (N == 0) {
+            if (n == 0) {
                 alert("БЕССОННИЦА :(");
                 return;
             }
