--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
             <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/quiz4.html';">Daily quiz 4</button>
             </td>
         </tr>
+        <tr>
+            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/quiz5.html';">Daily quiz 5</button>
+            </td>
+        </tr>
     </table>
     <h6>I am footer... Only footer and nothing else... </h6>
 </body>
