--- a/quiz5.html
+++ b/quiz5.html
@@ -22,6 +22,7 @@
                     else if (i == 0 || i == A.length - 1 || j == 0 || j == A[0].length - 1)
                         A[i][j] = 2;
                 }
+            alert(A);
             while (flag) {
                 flag = 0;
                 for (i = 1; i < A.length - 1; i++)
@@ -32,11 +33,13 @@
                         }
                     }
             }
+            alert(A);
             for (i = 0; i < A.length; i++)
                 for (var j = 0; j < A[0].length; j++) {
                     if (A[i][j] == 2)
                         A[i][j] = '.';
                 }
+            alert(A);
             for (i = 0; i < A.length; i++)
                 A[i] = A[i].join(' ');
             alert(A.join('\n'));
