--- a/quiz5.html
+++ b/quiz5.html
@@ -32,6 +32,7 @@
                             flag = 1;
                         }
                     }
+                alert(A);
             }
             alert(A);
             for (i = 0; i < A.length; i++)
