--- a/quiz6.html
+++ b/quiz6.html
@@ -23,6 +23,7 @@
             let A = (text.slice(2)).split(' ');
             let flag = 1;
             let i = 0;
+            alert(text);
             while (flag) {
                 if (i == A.length - 1 || A[i] > A[i + 1])
                     flag = 0;
@@ -31,6 +32,15 @@
             if (i != A.length - 1)
                 A = [].concat(A.slice(i + 1, A.length), A.slice(0, i + 1));
             alert(binary_search(A, x) ? "YES!" : "No...");
+            alert(binary_search(A, 13) ? "YES!" : "No...");
+            alert(binary_search(A, 12) ? "YES!" : "No...");
+            alert(binary_search(A, 24) ? "YES!" : "No...");
+            alert(binary_search(A, 1) ? "YES!" : "No...");
+            alert(binary_search(A, 11) ? "YES!" : "No...");
+            alert(binary_search(A, 6) ? "YES!" : "No...");
+            alert(binary_search(A, 8) ? "YES!" : "No...");
+            alert(binary_search(A, 9) ? "YES!" : "No...");
+            alert(binary_search(A, 7) ? "YES!" : "No...");
         }
 
         function read() {
