--- a/quiz6.html
+++ b/quiz6.html
@@ -30,7 +30,7 @@
                 i++;
             }
             if (i != A.length - 1)
-                A = [].concat(A.slice(i + 1, A.length), A.slice(0, i + 1));
+                A = [].concat(A.slice(i, A.length), A.slice(0, i));
             alert(A);
             alert(binary_search(A, 12) ? "YES!" : "No...");
         }
