--- a/quiz6.html
+++ b/quiz6.html
@@ -15,7 +15,7 @@
                 else
                     L = m;
             }
-            return (L == x);
+            return (A[L] == x);
         }
 
         function search(text) {
