--- a/quiz6.html
+++ b/quiz6.html
@@ -17,6 +17,9 @@
                     L = m;
                     m += Math.floor((R - L) / 2);
                 }
+                alert(m);
+                alert(L);
+                alert(R);
             }
             return (A[L] == x);
         }
