--- a/quiz6.html
+++ b/quiz6.html
@@ -9,6 +9,8 @@
             alert("A");
             let m = Math.floor((R - L) / 2);
             let L = 0, R = A.length;
+            alert("A");
+            alert(R - L);
             while (R - L > 1) {
                 alert("AAA");
                 if (A[m] > x) {
