--- a/quiz7.html
+++ b/quiz7.html
@@ -14,6 +14,7 @@
         }
 
         function search(text) {
+            alert(text)
             let A = text.split('');
             let max_pal = 1;
             for (let i = 0; i < A.length - 1; i++)
