--- a/quiz7.html
+++ b/quiz7.html
@@ -21,8 +21,10 @@
                 for (let j = 2; j < A.length + 1; j++) {
                     if (A.slice(i, j).length > max_pal && is_pal(A.slice(i, j))) {
                         max_pal = A.slice(i, j).length;
-                        if (max_pal == 12)
-                            alert(i, j);
+                        if (max_pal == 12) {
+                            alert(i);
+                            alert(j);
+                        }
                     }
                 }
             alert(max_pal);
