--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
             <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/quiz7.html';">Daily quiz 7</button>
             </td>
         </tr>
+        <tr>
+            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/quiz9.html';">Daily quiz 9</button>
+            </td>
+        </tr>
     </table>
     <h6>I am footer... Only footer and nothing else... </h6>
 </body>
