--- a/quiz9.html
+++ b/quiz9.html
@@ -13,7 +13,7 @@
             if (i == 0)
                 cnt = infinity;
             len = cnt;
-            cnt = 0;
+            i = index, cnt = 0;
             while (i < A.length - 1 && A[i] != 1)
                 i++, cnt++;
             if (i == A.length - 1)
