--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
             <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/quiz9.html';">Daily quiz 9</button>
             </td>
         </tr>
+	<tr>
+            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/2023-06-02/mandelbrot.html';">GLTF Example + Frame Buffer</button>
+            </td>
+        </tr>
     </table>
     <h6>I am footer... Only footer and nothing else... </h6>
 </body>
