Added some comments.

--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -245,6 +245,7 @@
     <label for="input_checkers_cell_width"> iteration number</label> <input type="text" id="input_checkers_cell_width"
         onkeyup="update_checkers_cell_width()" style="background-color:MediumPurple"><br>
 
+    <p>P.S. Учебная задача: вывод множества Мандельброта на шейдере с использованием WebGL. Поддерживается изменение точности фрактала, а также корректное масштабирование (от курсора). Проект 2021 года (8 класс)</p>p
 </body>
 
 </html>
