Added some comments.

--- a/2023-06-02/mandelbrot.html
+++ b/2023-06-02/mandelbrot.html
@@ -564,6 +564,7 @@
 
 <body onload="webGLStart();">
     <canvas id="wegl-canvas" style="border: none;" width="500" height="500"></canvas>
+    <p>P.S. Учебная задача: система анимации на WebGL, с поддержкой загрузки модели в формате gltf, а также fbo (в качестве демонстрации на модель выводится текстура кадра)</p>
 </body>
 
 </html>
